plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group 'net.hontvari'

compileJava {
    sourceCompatibility = "17"
    targetCompatibility = "17"
}

mainClassName = "arunyilvantarto.Main2"

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.add("--enable-preview")
}

run {
    jvmArgs(['--enable-preview'])
}

applicationDefaultJvmArgs = [
        "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED", // ControlsFX-nek
        "--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED" // preload-hoz
]

distributions {
    main {
        distributionBaseName = 'Arunyilvantarto'
    }
}

jar {
    archiveName 'abc.jar'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "com.miglayout:miglayout-javafx:11.0"
    implementation "org.controlsfx:controlsfx:11.1.0"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.12.3"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3"
    implementation "org.openjfx:javafx-base:11.0.2:win"
    implementation "org.openjfx:javafx-graphics:11.0.2:win"
    implementation "org.openjfx:javafx-controls:11.0.2:win"
    implementation "org.checkerframework:checker-qual:3.18.0"
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}
